--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "hubot":         ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-flowdock": ">= 0.0.1"
+    "hubot-flowdock": ">= 0.0.1",
+    "cheerio": ">= 0.12.1"
   },
 
   "engines": {
