--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "cheerio": ">= 0.12.1",
     "scraper": ">= 0.0.9",
     "underscore": ">=1.5.0",
-    "clark": "0.0.6"
+    "clark": "0.0.6",
+    "jake": "latest"
   },
 
   "engines": {
