--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "scraper": ">= 0.0.9",
     "underscore": ">=1.5.0",
     "clark": "0.0.6",
+    "wolfram": "0.2.2",
     "jake": "latest"
   },
 
