Teach bort how to keep track of the stick.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hosted-hubot",
   "version": "2.6.0",
 
-  "author": "GitHub Inc.",
+  "author": "GitHub Inc., supermatter, shiplington",
 
   "keywords": [
     "github",
