--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "underscore": ">=1.5.0",
     "clark": "0.0.6",
     "wolfram": "0.2.6",
-    "jake": "latest"
+    "jake": "latest",
+    "sugar": "latest"
   },
 
   "engines": {
