--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hubot":         ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-flowdock": ">= 0.0.1",
+    "buffertools": "latest",
     "cheerio": ">= 0.12.1",
     "scraper": ">= 0.0.9",
     "underscore": ">=1.5.0",
