--- a/package.json
+++ b/package.json
@@ -1,42 +1,39 @@
 {
   "name": "hosted-hubot",
   "version": "2.6.0",
-
   "author": "GitHub Inc., supermatter, shiplington",
-
   "keywords": [
     "github",
     "hubot",
     "campfire",
     "bot"
   ],
-
   "description": "A simple helpful robot for your Company",
-
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/github/hubot/raw/master/LICENSE"
-  }],
-
-  "repository" : {
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/github/hubot/raw/master/LICENSE"
+    }
+  ],
+  "repository": {
     "type": "git",
     "url": "https://github.com/github/hubot.git"
   },
-
   "dependencies": {
-    "hubot":         ">= 2.11.0 < 3.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-flowdock": ">= 0.0.1",
     "cheerio": ">= 0.12.1",
+    "clark": "0.0.6",
+    "hubot": ">= 2.11.0 < 3.0.0",
+    "hubot-auth": "^1.2.0",
+    "hubot-flowdock": ">= 0.0.1",
+    "hubot-heroku": "^0.1.16",
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "jake": "latest",
     "scraper": ">= 0.0.9",
     "underscore": ">=1.5.0",
-    "clark": "0.0.6",
-    "wolfram": "0.3.1",
-    "jake": "latest"
+    "wolfram": "0.3.1"
   },
-
   "engines": {
     "node": ">= 0.12.x",
-    "npm":  ">= 2.7.x"
+    "npm": ">= 2.7.x"
   }
 }
