--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "hubot": ">= 2.11.0 < 3.0.0",
     "hubot-auth": "^1.2.0",
     "hubot-flowdock": ">= 0.0.1",
-    "hubot-heroku": "^0.1.16",
+    "heroku-client": ">= 2.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "jake": "latest",
     "scraper": ">= 0.0.9",
