--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "heroku-client": ">= 2.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "jake": "latest",
+    "lodash": ">= 3.10.1",
     "scraper": ">= 0.0.9",
     "underscore": ">=1.5.0",
     "wolfram": "0.3.1"
