--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "jake": "latest",
     "lodash": ">= 3.10.1",
+    "moment": ">= 2.10.6",
     "scraper": ">= 0.0.9",
     "underscore": ">=1.5.0",
     "wolfram": "0.3.1"
