--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "jake": "latest",
     "lodash": ">= 3.10.1",
     "moment": ">= 2.10.6",
-    "underscore": ">=1.5.0",
-    "wolfram": "0.3.1"
+    "underscore": ">=1.5.0"
+    // "wolfram": "0.3.1" // commented out as libxmljs is a dependency that is failing to install on heroku
   },
   "engines": {
     "node": ">= 0.12.x",
