--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hubot-flowdock": ">= 0.0.1",
     "heroku-client": ">= 2.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "hubot-lists": "latest",
     "jake": "latest",
     "lodash": ">= 3.10.1",
     "moment": ">= 2.10.6",
