--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "cheerio": ">= 0.2.0",
     "chrono-node": ">= 1.0.0",
     "clark": "0.0.6",
+    "heroku-client": ">= 2.0.0",
     "hubot": ">= 2.11.0 < 3.0.0",
     "hubot-auth": "^1.2.0",
     "hubot-flowdock": ">= 0.0.1",
-    "heroku-client": ">= 2.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "hubot-github-assignments": "0.0.1",
     "hubot-lists": "latest",
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "jake": "latest",
     "lodash": ">= 3.10.1",
     "moment": ">= 2.10.6",
