--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hubot-github-assignments": "latest",
     "hubot-lists": "latest",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "hubot-star-wars": "^0.2.0",
     "jake": "latest",
     "lodash": ">= 3.10.1",
     "moment": ">= 2.10.6",
